ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  # namespace: satish-k8s
spec:
  ingressClassName: nginx

  rules:

    - host: axion-ui.sxlabs.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: axion-ui-service
                port:
                  number: 80

    - host: telemetry.sxlabs.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-service
                port:
                  number: 8000

    # - host: pgadmin.sxlabs.shop
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: pgadmin-service
    #             port:
    #               number: 80

    - host: api.sxlabs.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingestion-service
                port:
                  number: 8800

    # - host: simulator.sxlabs.shop
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: simulator-service
    #             port:
    #               number: 8088
